--- a/micrograd_from_scratch.ipynb
+++ b/micrograd_from_scratch.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,16 +24,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f85a3bb7e20>]"
+       "[<matplotlib.lines.Line2D at 0x7f20bb471ee0>]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,34 +105,38 @@
     "    nodes, edges = trace(root)\n",
     "    for n in nodes:\n",
     "        uid = str(id(n))\n",
-    "        dot.node(name = uid, label=f'{n.value}', shape='record')\n",
+    "        dot.node(name = uid, label=\"{%s|value %.4f| grad %.4f}\"%(n._label,n.value,n.grad), shape='record')\n",
     "        if n._op:\n",
     "            dot.node(name=uid + n._op, label=n._op)\n",
     "            dot.edge(uid + n._op, uid)\n",
     "    \n",
+    "    for n1, n2 in edges:\n",
+    "        dot.edge(str(id(n1)), str(id(n2))+n2._op)\n",
     "    return dot"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Node(value = 9.0)"
+       "Node(value = -8.0)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "class Node:\n",
-    "    def __init__(self, value, _children=set(), _op=[]):\n",
+    "    def __init__(self, value, _children=set(), _op=[], grad=0, _label=\"NOLABEL\"):\n",
     "        self.value = value\n",
+    "        self.grad = 0\n",
+    "        self._label = _label\n",
     "        self._children = _children\n",
     "        self._op = _op\n",
     "\n",
@@ -143,37 +147,193 @@
     "        return Node(self.value + other.value, (self, other), '+')\n",
     "    \n",
     "    def __mul__(self, other):\n",
-    "        return Node(self.value + other.value, (self, other), '*')\n",
+    "        return Node(self.value * other.value, (self, other), '*')\n",
     "    \n",
-    "a = Node(2.0)\n",
-    "b = Node(-3.0)\n",
-    "c = Node(10)\n",
-    "d = a*b+c\n",
-    "d"
+    "a = Node(2.0, _label='a')\n",
+    "b = Node(-3.0, _label='b')\n",
+    "c = Node(10, _label='c')\n",
+    "e = a*b; e._label='e'\n",
+    "d = e + c; d._label='d'\n",
+    "f = Node(-2.0, _label='f')\n",
+    "l = d * f; l._label='l' \n",
+    "l"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'Node' object has no attribute '_prev'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[25], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m draw_dot(d)\n",
-      "Cell \u001b[0;32mIn[24], line 17\u001b[0m, in \u001b[0;36mdraw_dot\u001b[0;34m(root)\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mdraw_dot\u001b[39m(root):\n\u001b[1;32m     15\u001b[0m     dot \u001b[39m=\u001b[39m Digraph(\u001b[39mformat\u001b[39m\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39msvg\u001b[39m\u001b[39m'\u001b[39m, graph_attr\u001b[39m=\u001b[39m{\u001b[39m'\u001b[39m\u001b[39mrankdir\u001b[39m\u001b[39m'\u001b[39m:\u001b[39m'\u001b[39m\u001b[39mLR\u001b[39m\u001b[39m'\u001b[39m})\n\u001b[0;32m---> 17\u001b[0m     nodes, edges \u001b[39m=\u001b[39m trace(root)\n\u001b[1;32m     18\u001b[0m     \u001b[39mfor\u001b[39;00m n \u001b[39min\u001b[39;00m nodes:\n\u001b[1;32m     19\u001b[0m         uid \u001b[39m=\u001b[39m \u001b[39mstr\u001b[39m(\u001b[39mid\u001b[39m(n))\n",
-      "Cell \u001b[0;32mIn[24], line 11\u001b[0m, in \u001b[0;36mtrace\u001b[0;34m(root)\u001b[0m\n\u001b[1;32m      9\u001b[0m             edges\u001b[39m.\u001b[39madd((child, v))\n\u001b[1;32m     10\u001b[0m             build(child)\n\u001b[0;32m---> 11\u001b[0m build(root)\n\u001b[1;32m     12\u001b[0m \u001b[39mreturn\u001b[39;00m nodes, edges\n",
-      "Cell \u001b[0;32mIn[24], line 8\u001b[0m, in \u001b[0;36mtrace.<locals>.build\u001b[0;34m(v)\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[39mif\u001b[39;00m v \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m nodes:\n\u001b[1;32m      7\u001b[0m     nodes\u001b[39m.\u001b[39madd(v)\n\u001b[0;32m----> 8\u001b[0m     \u001b[39mfor\u001b[39;00m child \u001b[39min\u001b[39;00m v\u001b[39m.\u001b[39;49m_prev:\n\u001b[1;32m      9\u001b[0m         edges\u001b[39m.\u001b[39madd((child, v))\n\u001b[1;32m     10\u001b[0m         build(child)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Node' object has no attribute '_prev'"
-     ]
+     "data": {
+      "image/svg+xml": [
+       "<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"no\"?>\n",
+       "<!DOCTYPE svg PUBLIC \"-//W3C//DTD SVG 1.1//EN\"\n",
+       " \"http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd\">\n",
+       "<!-- Generated by graphviz version 2.43.0 (0)\n",
+       " -->\n",
+       "<!-- Title: %3 Pages: 1 -->\n",
+       "<svg width=\"1352pt\" height=\"128pt\"\n",
+       " viewBox=\"0.00 0.00 1352.00 128.00\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">\n",
+       "<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 124)\">\n",
+       "<title>%3</title>\n",
+       "<polygon fill=\"white\" stroke=\"transparent\" points=\"-4,4 -4,-124 1348,-124 1348,4 -4,4\"/>\n",
+       "<!-- 139781124367216 -->\n",
+       "<g id=\"node1\" class=\"node\">\n",
+       "<title>139781124367216</title>\n",
+       "<polygon fill=\"none\" stroke=\"black\" points=\"369,-83.5 369,-119.5 615,-119.5 615,-83.5 369,-83.5\"/>\n",
+       "<text text-anchor=\"middle\" x=\"381\" y=\"-97.8\" font-family=\"Times,serif\" font-size=\"14.00\">c</text>\n",
+       "<polyline fill=\"none\" stroke=\"black\" points=\"393,-83.5 393,-119.5 \"/>\n",
+       "<text text-anchor=\"middle\" x=\"452\" y=\"-97.8\" font-family=\"Times,serif\" font-size=\"14.00\">value 10.0000</text>\n",
+       "<polyline fill=\"none\" stroke=\"black\" points=\"511,-83.5 511,-119.5 \"/>\n",
+       "<text text-anchor=\"middle\" x=\"563\" y=\"-97.8\" font-family=\"Times,serif\" font-size=\"14.00\">grad 0.0000</text>\n",
+       "</g>\n",
+       "<!-- 139781124368848+ -->\n",
+       "<g id=\"node10\" class=\"node\">\n",
+       "<title>139781124368848+</title>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"678\" cy=\"-73.5\" rx=\"27\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"678\" y=\"-69.8\" font-family=\"Times,serif\" font-size=\"14.00\">+</text>\n",
+       "</g>\n",
+       "<!-- 139781124367216&#45;&gt;139781124368848+ -->\n",
+       "<g id=\"edge9\" class=\"edge\">\n",
+       "<title>139781124367216&#45;&gt;139781124368848+</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M611.35,-83.49C622.08,-81.86 632.29,-80.3 641.32,-78.93\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"641.98,-82.37 651.34,-77.4 640.93,-75.45 641.98,-82.37\"/>\n",
+       "</g>\n",
+       "<!-- 139781124368992 -->\n",
+       "<g id=\"node2\" class=\"node\">\n",
+       "<title>139781124368992</title>\n",
+       "<polygon fill=\"none\" stroke=\"black\" points=\"1106,-27.5 1106,-63.5 1344,-63.5 1344,-27.5 1106,-27.5\"/>\n",
+       "<text text-anchor=\"middle\" x=\"1116.5\" y=\"-41.8\" font-family=\"Times,serif\" font-size=\"14.00\">l</text>\n",
+       "<polyline fill=\"none\" stroke=\"black\" points=\"1127,-27.5 1127,-63.5 \"/>\n",
+       "<text text-anchor=\"middle\" x=\"1183.5\" y=\"-41.8\" font-family=\"Times,serif\" font-size=\"14.00\">value &#45;8.0000</text>\n",
+       "<polyline fill=\"none\" stroke=\"black\" points=\"1240,-27.5 1240,-63.5 \"/>\n",
+       "<text text-anchor=\"middle\" x=\"1292\" y=\"-41.8\" font-family=\"Times,serif\" font-size=\"14.00\">grad 0.0000</text>\n",
+       "</g>\n",
+       "<!-- 139781124368992* -->\n",
+       "<g id=\"node3\" class=\"node\">\n",
+       "<title>139781124368992*</title>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"1043\" cy=\"-45.5\" rx=\"27\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"1043\" y=\"-41.8\" font-family=\"Times,serif\" font-size=\"14.00\">*</text>\n",
+       "</g>\n",
+       "<!-- 139781124368992*&#45;&gt;139781124368992 -->\n",
+       "<g id=\"edge1\" class=\"edge\">\n",
+       "<title>139781124368992*&#45;&gt;139781124368992</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M1070.17,-45.5C1077.7,-45.5 1086.45,-45.5 1095.89,-45.5\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"1095.95,-49 1105.95,-45.5 1095.95,-42 1095.95,-49\"/>\n",
+       "</g>\n",
+       "<!-- 139781124368560 -->\n",
+       "<g id=\"node4\" class=\"node\">\n",
+       "<title>139781124368560</title>\n",
+       "<polygon fill=\"none\" stroke=\"black\" points=\"371,-28.5 371,-64.5 613,-64.5 613,-28.5 371,-28.5\"/>\n",
+       "<text text-anchor=\"middle\" x=\"383.5\" y=\"-42.8\" font-family=\"Times,serif\" font-size=\"14.00\">e</text>\n",
+       "<polyline fill=\"none\" stroke=\"black\" points=\"396,-28.5 396,-64.5 \"/>\n",
+       "<text text-anchor=\"middle\" x=\"452.5\" y=\"-42.8\" font-family=\"Times,serif\" font-size=\"14.00\">value &#45;6.0000</text>\n",
+       "<polyline fill=\"none\" stroke=\"black\" points=\"509,-28.5 509,-64.5 \"/>\n",
+       "<text text-anchor=\"middle\" x=\"561\" y=\"-42.8\" font-family=\"Times,serif\" font-size=\"14.00\">grad 0.0000</text>\n",
+       "</g>\n",
+       "<!-- 139781124368560&#45;&gt;139781124368848+ -->\n",
+       "<g id=\"edge8\" class=\"edge\">\n",
+       "<title>139781124368560&#45;&gt;139781124368848+</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M613.16,-64.13C623.34,-65.63 633.01,-67.05 641.61,-68.31\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"641.11,-71.77 651.52,-69.76 642.13,-64.85 641.11,-71.77\"/>\n",
+       "</g>\n",
+       "<!-- 139781124368560* -->\n",
+       "<g id=\"node5\" class=\"node\">\n",
+       "<title>139781124368560*</title>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"306\" cy=\"-46.5\" rx=\"27\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"306\" y=\"-42.8\" font-family=\"Times,serif\" font-size=\"14.00\">*</text>\n",
+       "</g>\n",
+       "<!-- 139781124368560*&#45;&gt;139781124368560 -->\n",
+       "<g id=\"edge2\" class=\"edge\">\n",
+       "<title>139781124368560*&#45;&gt;139781124368560</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M333.36,-46.5C341.26,-46.5 350.51,-46.5 360.5,-46.5\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"360.7,-50 370.7,-46.5 360.7,-43 360.7,-50\"/>\n",
+       "</g>\n",
+       "<!-- 139781124369760 -->\n",
+       "<g id=\"node6\" class=\"node\">\n",
+       "<title>139781124369760</title>\n",
+       "<polygon fill=\"none\" stroke=\"black\" points=\"2.5,-56.5 2.5,-92.5 240.5,-92.5 240.5,-56.5 2.5,-56.5\"/>\n",
+       "<text text-anchor=\"middle\" x=\"15\" y=\"-70.8\" font-family=\"Times,serif\" font-size=\"14.00\">a</text>\n",
+       "<polyline fill=\"none\" stroke=\"black\" points=\"27.5,-56.5 27.5,-92.5 \"/>\n",
+       "<text text-anchor=\"middle\" x=\"82\" y=\"-70.8\" font-family=\"Times,serif\" font-size=\"14.00\">value 2.0000</text>\n",
+       "<polyline fill=\"none\" stroke=\"black\" points=\"136.5,-56.5 136.5,-92.5 \"/>\n",
+       "<text text-anchor=\"middle\" x=\"188.5\" y=\"-70.8\" font-family=\"Times,serif\" font-size=\"14.00\">grad 0.0000</text>\n",
+       "</g>\n",
+       "<!-- 139781124369760&#45;&gt;139781124368560* -->\n",
+       "<g id=\"edge6\" class=\"edge\">\n",
+       "<title>139781124369760&#45;&gt;139781124368560*</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M239.89,-56.49C250.53,-54.86 260.65,-53.3 269.61,-51.93\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"270.2,-55.38 279.55,-50.4 269.14,-48.46 270.2,-55.38\"/>\n",
+       "</g>\n",
+       "<!-- 139781124370288 -->\n",
+       "<g id=\"node7\" class=\"node\">\n",
+       "<title>139781124370288</title>\n",
+       "<polygon fill=\"none\" stroke=\"black\" points=\"0,-1.5 0,-37.5 243,-37.5 243,-1.5 0,-1.5\"/>\n",
+       "<text text-anchor=\"middle\" x=\"13\" y=\"-15.8\" font-family=\"Times,serif\" font-size=\"14.00\">b</text>\n",
+       "<polyline fill=\"none\" stroke=\"black\" points=\"26,-1.5 26,-37.5 \"/>\n",
+       "<text text-anchor=\"middle\" x=\"82.5\" y=\"-15.8\" font-family=\"Times,serif\" font-size=\"14.00\">value &#45;3.0000</text>\n",
+       "<polyline fill=\"none\" stroke=\"black\" points=\"139,-1.5 139,-37.5 \"/>\n",
+       "<text text-anchor=\"middle\" x=\"191\" y=\"-15.8\" font-family=\"Times,serif\" font-size=\"14.00\">grad 0.0000</text>\n",
+       "</g>\n",
+       "<!-- 139781124370288&#45;&gt;139781124368560* -->\n",
+       "<g id=\"edge7\" class=\"edge\">\n",
+       "<title>139781124370288&#45;&gt;139781124368560*</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M243.21,-37.36C252.62,-38.75 261.55,-40.07 269.56,-41.26\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"269.1,-44.73 279.5,-42.73 270.12,-37.8 269.1,-44.73\"/>\n",
+       "</g>\n",
+       "<!-- 139781122527680 -->\n",
+       "<g id=\"node8\" class=\"node\">\n",
+       "<title>139781122527680</title>\n",
+       "<polygon fill=\"none\" stroke=\"black\" points=\"741,-0.5 741,-36.5 980,-36.5 980,-0.5 741,-0.5\"/>\n",
+       "<text text-anchor=\"middle\" x=\"752\" y=\"-14.8\" font-family=\"Times,serif\" font-size=\"14.00\">f</text>\n",
+       "<polyline fill=\"none\" stroke=\"black\" points=\"763,-0.5 763,-36.5 \"/>\n",
+       "<text text-anchor=\"middle\" x=\"819.5\" y=\"-14.8\" font-family=\"Times,serif\" font-size=\"14.00\">value &#45;2.0000</text>\n",
+       "<polyline fill=\"none\" stroke=\"black\" points=\"876,-0.5 876,-36.5 \"/>\n",
+       "<text text-anchor=\"middle\" x=\"928\" y=\"-14.8\" font-family=\"Times,serif\" font-size=\"14.00\">grad 0.0000</text>\n",
+       "</g>\n",
+       "<!-- 139781122527680&#45;&gt;139781124368992* -->\n",
+       "<g id=\"edge5\" class=\"edge\">\n",
+       "<title>139781122527680&#45;&gt;139781124368992*</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M980.13,-36.25C989.53,-37.65 998.47,-38.99 1006.48,-40.19\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"1006.03,-43.66 1016.44,-41.68 1007.07,-36.74 1006.03,-43.66\"/>\n",
+       "</g>\n",
+       "<!-- 139781124368848 -->\n",
+       "<g id=\"node9\" class=\"node\">\n",
+       "<title>139781124368848</title>\n",
+       "<polygon fill=\"none\" stroke=\"black\" points=\"741,-55.5 741,-91.5 980,-91.5 980,-55.5 741,-55.5\"/>\n",
+       "<text text-anchor=\"middle\" x=\"754\" y=\"-69.8\" font-family=\"Times,serif\" font-size=\"14.00\">d</text>\n",
+       "<polyline fill=\"none\" stroke=\"black\" points=\"767,-55.5 767,-91.5 \"/>\n",
+       "<text text-anchor=\"middle\" x=\"821.5\" y=\"-69.8\" font-family=\"Times,serif\" font-size=\"14.00\">value 4.0000</text>\n",
+       "<polyline fill=\"none\" stroke=\"black\" points=\"876,-55.5 876,-91.5 \"/>\n",
+       "<text text-anchor=\"middle\" x=\"928\" y=\"-69.8\" font-family=\"Times,serif\" font-size=\"14.00\">grad 0.0000</text>\n",
+       "</g>\n",
+       "<!-- 139781124368848&#45;&gt;139781124368992* -->\n",
+       "<g id=\"edge4\" class=\"edge\">\n",
+       "<title>139781124368848&#45;&gt;139781124368992*</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M977.6,-55.49C987.91,-53.89 997.74,-52.37 1006.46,-51.01\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"1007.18,-54.44 1016.52,-49.45 1006.1,-47.53 1007.18,-54.44\"/>\n",
+       "</g>\n",
+       "<!-- 139781124368848+&#45;&gt;139781124368848 -->\n",
+       "<g id=\"edge3\" class=\"edge\">\n",
+       "<title>139781124368848+&#45;&gt;139781124368848</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M705.25,-73.5C712.64,-73.5 721.22,-73.5 730.47,-73.5\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"730.74,-77 740.74,-73.5 730.74,-70 730.74,-77\"/>\n",
+       "</g>\n",
+       "</g>\n",
+       "</svg>\n"
+      ],
+      "text/plain": [
+       "<graphviz.graphs.Digraph at 0x7f2154440dc0>"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "draw_dot(d)"
+    "draw_dot(l)"
    ]
   },
   {
